--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ensdomains/thorin": "1.0.0-beta.9",
     "@tanstack/react-router": "^1.81.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
