--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@ensdomains/thorin": "1.0.0-beta.9",
+    "@tanstack/react-query": "^5.60.2",
     "@tanstack/react-router": "^1.81.9",
+    "connectkit": "^1.8.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "2.x",
+    "wagmi": "^2.12.32"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
