--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,8 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc = "0.8.25"
+via_ir = true
 optimizer = true
-optimizer_runs = 200
+optimizer_runs = 1000
 
 [rpc_endpoints]
 local = "http://localhost:8545"
