--- a/solver/package.json
+++ b/solver/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "express": "^4.21.1",
-    "ramda": "^0.30.1"
+    "ramda": "^0.30.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
