--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-form": "^0.35.0",
     "@tanstack/react-query": "^5.60.2",
     "@tanstack/react-router": "^1.81.9",
+    "axios": "^1.7.7",
     "connectkit": "^1.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
